configuration is added